gcc/testsuite/gcc.dg/rtl/truncated-rtl-file.c
void __RTL test (void)
{ /* { dg-error "no closing brace" } */
